--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: /users/yxu150/anaconda/FAIM2
+name: cellreg
 channels:
   - conda-forge
   - defaults
@@ -9,6 +9,7 @@ dependencies:
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
   - ca-certificates=2023.7.22=hbcca054_0
+  - certifi=2023.7.22=pyhd8ed1ab_0
   - click=8.0.4=py39h06a4308_0
   - contourpy=1.1.1=py39h7633fee_1
   - cycler=0.12.1=pyhd8ed1ab_0
@@ -71,7 +72,6 @@ dependencies:
   - mysql=5.7.24=h721c034_2
   - ncurses=6.4=h6a678d5_0
   - openssl=3.1.3=hd590300_0
-  - packaging=23.1=py39h06a4308_0
   - pathspec=0.10.3=py39h06a4308_0
   - pcre=8.45=h9c3ff4c_0
   - pip=23.2.1=py39h06a4308_0
@@ -98,6 +98,7 @@ dependencies:
   - tomli=2.0.1=py39h06a4308_0
   - tornado=6.3.3=py39hd1e30aa_1
   - typing_extensions=4.7.1=py39h06a4308_0
+  - tzdata=2023c=h71feb2d_0
   - unicodedata2=15.1.0=py39hd1e30aa_0
   - wheel=0.38.4=py39h06a4308_0
   - xorg-libxau=1.0.11=hd590300_0
@@ -107,122 +108,30 @@ dependencies:
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
-    - anyio==4.0.0
-    - argon2-cffi==23.1.0
-    - argon2-cffi-bindings==21.2.0
-    - arrow==1.2.3
-    - asttokens==2.4.0
-    - async-lru==2.0.4
-    - attrs==23.1.0
-    - babel==2.12.1
-    - backcall==0.2.0
     - beautifulsoup4==4.12.2
-    - bleach==6.0.0
-    - cellpose==2.2.3
-    - certifi==2023.7.22
-    - cffi==1.15.1
-    - charset-normalizer==3.2.0
-    - comm==0.1.4
-    - debugpy==1.8.0
-    - decorator==5.1.1
-    - defusedxml==0.7.1
-    - exceptiongroup==1.1.3
-    - executing==1.2.0
-    - fastjsonschema==2.18.0
-    - fastremap==1.14.0
-    - fqdn==1.5.1
+    - charset-normalizer==3.3.1
+    - csbdeep==0.7.4
+    - filelock==3.12.4
+    - gdown==4.7.1
     - idna==3.4
-    - imagecodecs==2023.9.18
-    - imageio==2.31.3
-    - importlib-metadata==6.8.0
-    - ipykernel==6.25.2
-    - ipython==8.15.0
-    - ipython-genutils==0.2.0
-    - ipywidgets==8.1.1
-    - isoduration==20.11.0
-    - jedi==0.19.0
-    - jinja2==3.1.2
-    - json5==0.9.14
-    - jsonpointer==2.4
-    - jsonschema==4.19.0
-    - jsonschema-specifications==2023.7.1
-    - jupyter==1.0.0
-    - jupyter-client==8.3.1
-    - jupyter-console==6.6.3
-    - jupyter-core==5.3.1
-    - jupyter-events==0.7.0
-    - jupyter-lsp==2.2.0
-    - jupyter-server==2.7.3
-    - jupyter-server-terminals==0.4.4
-    - jupyterlab==4.0.6
-    - jupyterlab-pygments==0.2.2
-    - jupyterlab-server==2.25.0
-    - jupyterlab-widgets==3.0.9
+    - imageio==2.31.6
     - lazy-loader==0.3
-    - llvmlite==0.40.1
-    - markupsafe==2.1.3
-    - matplotlib-inline==0.1.6
-    - mistune==3.0.1
-    - natsort==8.4.0
-    - nbclient==0.8.0
-    - nbconvert==7.8.0
-    - nbformat==5.9.2
-    - nest-asyncio==1.5.8
-    - networkx==3.1
-    - notebook==7.0.3
-    - notebook-shim==0.2.3
-    - numba==0.57.1
-    - numpy==1.24.4
-    - opencv-python==4.8.0.76
-    - opencv-python-headless==4.8.0.76
-    - overrides==7.4.0
-    - pandas==2.1.0
-    - pandocfilters==1.5.0
-    - parso==0.8.3
-    - pexpect==4.8.0
-    - pickleshare==0.7.5
-    - pillow==10.0.1
-    - prometheus-client==0.17.1
-    - prompt-toolkit==3.0.39
-    - psutil==5.9.5
-    - ptyprocess==0.7.0
-    - pure-eval==0.2.2
-    - pycparser==2.21
-    - pygments==2.16.1
-    - python-json-logger==2.0.7
-    - pytz==2023.3.post1
-    - pywavelets==1.4.1
+    - networkx==3.2
+    - numpy==1.26.1
+    - opencv-python==4.8.1.78
+    - packaging==23.2
+    - pillow==10.1.0
+    - pysocks==1.7.1
     - pyyaml==6.0.1
-    - pyzmq==25.1.1
-    - qtconsole==5.4.4
-    - qtpy==2.4.0
-    - referencing==0.30.2
     - requests==2.31.0
-    - rfc3339-validator==0.1.4
-    - rfc3986-validator==0.1.1
-    - roifile==2023.8.30
-    - rpds-py==0.10.3
-    - scikit-image==0.21.0
-    - scipy==1.11.2
-    - send2trash==1.8.2
-    - sniffio==1.3.0
+    - scikit-image==0.22.0
+    - scipy==1.11.3
     - soupsieve==2.5
-    - stack-data==0.6.2
-    - terminado==0.17.1
-    - tifffile==2023.9.18
-    - tinycss2==1.2.1
+    - tifffile==2023.9.26
     - torch==1.10.1+cu111
     - torchaudio==0.10.1+cu111
     - torchvision==0.11.2+cu111
     - tqdm==4.66.1
-    - traitlets==5.10.0
-    - typing-extensions==4.8.0
-    - tzdata==2023.3
-    - uri-template==1.3.0
-    - urllib3==2.0.4
-    - wcwidth==0.2.6
-    - webcolors==1.13
-    - webencodings==0.5.1
-    - websocket-client==1.6.3
-    - widgetsnbextension==4.0.9
-prefix: /users/yxu150/anaconda/FAIM2
+    - typer==0.9.0
+    - urllib3==2.0.7
+prefix: /users/fmcdona4/.conda/envs/cellreg
