--- a/environments/deepcad.yml
+++ b/environments/deepcad.yml
@@ -25,10 +25,10 @@ dependencies:
     - requests
     - scikit-image
     - scipy
-    - tifffile2023.9.26
-    - torch==1.10.1+cu111
-    - torchaudio==0.10.1+cu111
-    - torchvision==0.11.2+cu111
+    - tifffile
+    - torch==1.10.1+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html
+    - torchaudio==0.10.1+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html
+    - torchvision==0.11.2+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html
     - typer
     - typer-cli
     - urllib3
