env: fix deepcad env file

--- a/environments/deepcad.yml
+++ b/environments/deepcad.yml
@@ -6,16 +6,17 @@ dependencies:
   - python=3.9
   - ipykernel
   - ipython
-  - matplotlib
-  - networkx
-  - numpy
-  - pandas
   - pip
-  - toml
-  - tomli
-  - tqdm
   - pip:
+    - -f https://download.pytorch.org/whl/cu111/torch_stable.html
     - beautifulsoup4
+    - matplotlib
+    - networkx
+    - numpy
+    - pandas
+    - toml
+    - tomli
+    - tqdm
     - csbdeep
     - gdown
     - opencv-python
@@ -26,10 +27,10 @@ dependencies:
     - scikit-image
     - scipy
     - tifffile
-    - torch==1.10.1+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html
-    - torchaudio==0.10.1+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html
-    - torchvision==0.11.2+cu111 -f https://download.pytorch.org/whl/cu111/torch_stable.html
     - typer
     - typer-cli
     - urllib3
     - natsort
+    - "torch==1.10.1+cu111"
+    - "torchaudio==0.10.1+cu111"
+    - "torchvision==0.11.2+cu111"
